# API-DRF

./: README.md  pyproject.toml
tutorial/app/: views.py
tutorial/snippets/: serializers.py  urls.py  views.py
tutorial/snippets/migrations/: 0001_initial.py
tutorial/snippets/templates/snippets/: index.html
tutorial/tutorial/: settings.py  urls.py
